--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,9 +28,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: cargo build --verbose
+      run: docker build -t sacn-tests -f docker-linux/Dockerfile .
     - name: Run tests
-      run: ./docker-linux/run_tests.sh
+      run: docker run --cap-add=NET_ADMIN --privileged sacn-tests
 
   test-windows:
 
