--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -43,3 +43,14 @@ jobs:
     - name: Run tests
       run: cargo test --verbose -- --test-threads=1
 
+  test-windows-ipv4:
+
+    runs-on: windows-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Build
+      run: docker build -t sacn-tests-windows -f docker-windows/Dockerfile .
+    - name: Run tests
+      run: docker run --cap-add=NET_ADMIN --privileged sacn-tests-windows
+
